--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg nav">
+<nav class="navbar navbar-expand nav">
       <div class="logo">
         <img src="/assets/images/logo1-preview.jpg" alt="">
       </div>
@@ -9,32 +9,32 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li *ngIf="isLogin" class="nav_menu nav-item active ">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="home">Home </a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="home">Home </a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="problem">Problem</a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="problem">Problem</a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="status">Status</a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="status">Status</a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="group">Group</a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="group">Group</a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="contest">Contest</a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="contest">Contest</a>
             </li>
 
             <li *ngIf="!isLogin" class="nav_menu nav-item">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="login">Login</a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="login">Login</a>
             </li>
             <li *ngIf="!isLogin" class="nav_menu nav-item">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="register">Register</a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="register">Register</a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
-                <a class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="profile/{{handle}}">Profile</a>
+                <a class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="profile/{{handle}}">Profile</a>
             </li>
             <li *ngIf="isLogin" class="nav_menu nav-item">
-                <a (click)="logOut()" class="nav-link p-2 p-lg-3" routerLinkActive="bg-dark text-white" routerLink="logout">Logout</a>
+                <a (click)="logOut()" class="nav-link p-2" routerLinkActive="bg-white text-black" routerLink="logout">Logout</a>
             </li>
         </ul>
       </div>
