--- a/src/app/Components/contest-details/contest-details.component.html
+++ b/src/app/Components/contest-details/contest-details.component.html
@@ -3,74 +3,89 @@
         <div class="row">
             <div class="col-4 text-start">
                 <b>Begin: </b>
-                <span class="timestamp">{{contest.beginTime * 1000 | date:'medium'}}</span>
+                <span class="timestamp">{{
+                    contest.beginTime * 1000 | date : "medium"
+                    }}</span>
             </div>
             <div class="col-4 text-center">
                 <h3>
                     <!-- <i id="btn-favorite" class="fa fa-star-o"></i> -->
-                    {{contest.title}}
+                    {{ contest.title }}
                 </h3>
             </div>
             <div class="col-4 text-end">
                 <b>End: </b>
-                <span class="timestamp">{{contest.endTime * 1000 | date:'medium'}}</span>
+                <span class="timestamp">{{
+                    contest.endTime * 1000 | date : "medium"
+                    }}</span>
             </div>
         </div>
-    <div class="row">
+        <div class="row">
             <div class="col-12">
                 <!-- progress bar -->
-                <div style="width: 100%;">
+                <div style="width: 100%">
                     <div class="progress">
-            
                         <div class="progress-bar bg-success" role="progressbar" [style.width.%]="progressBarValue"
-                        aria-valuemin="0" aria-valuemax="100">
-                    </div>
-                    
-                   
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                        <!-- Countdown timer -->
                     </div>
                 </div>
-        <div class="row">
-            <div class="col-4 text-start" id="info-elapsed"></div>
-            <div class="col-4 text-center mt-5">
-                <span id="info-running" class="text-success">{{contest.contestStatus}}</span>
-            </div>
-            <div class="col-4 text-end" id="info-remaining"></div>
-        </div>
-    </div>
-    </div>
-    <div class="contest-details">
-        <div class="row ">
-            <div class="all-link d-flex ">
-                <div class="left  col-xl-6 col-lg-12 ">
-                <button class="link overview btn" (click)="onBtnClick('overview')" routerLinkActive="active">Overview</button>
-                <button class="link problem btn"(click)="onBtnClick('problem')">Problem</button>
-                <button class="link status btn" (click)="onBtnClick('status')"> Status</button>
-                <button class="link rank btn" (click)="onBtnClick('rank')">Rank</button>
-                
-            </div>
-                <div class="right col-xl-4 col-lg-12 d-flex btn-group text-xs-right">
-                    <button type="button" class="btn btn-secondary">Setting</button>
-                    <button type="button" class="btn btn-secondary">Update</button>
-                    <button type="button" class="btn btn-secondary">Delete</button>
+                <div class="row">
+                    <div class="col-4" id="info-elapsed">
+                        <span>
+                            <p class="text-start">
+                                Time until contest starts: {{ countdownTimer }}
+                            </p>
+                        </span>
+                    </div>
+                    <div class="col-4 text-center mt-5">
+                        <span id="info-running" class="text-success">{{
+                            contest.contestStatus
+                            }}</span>
+                    </div>
+                    <div class="col-4 text-end" id="info-remaining"></div>
                 </div>
             </div>
+        </div>
+        <div class="contest-details">
+            <div class="row">
+                <div class="all-link d-flex">
+                    <div class="left col-xl-6 col-lg-12">
+                        <button class="link overview btn" (click)="onBtnClick('overview')" routerLinkActive="active">
+                            Overview
+                        </button>
+                        <button class="link problem btn" (click)="onBtnClick('problem')">
+                            Problem
+                        </button>
+                        <button class="link status btn" (click)="onBtnClick('status')">
+                            Status
+                        </button>
+                        <button class="link rank btn" (click)="onBtnClick('rank')">
+                            Rank
+                        </button>
+                    </div>
+                    <div class="right col-xl-4 col-lg-12 d-flex btn-group text-xs-right">
+                        <button type="button" class="btn btn-secondary">Setting</button>
+                        <button type="button" class="btn btn-secondary">Update</button>
+                        <button type="button" class="btn btn-secondary">Delete</button>
+                    </div>
+                </div>
 
-
-    <div class="content container-fluid">
-     
-        <div *ngIf="selectedButton === 'overview'">
-            <app-overview></app-overview>
+                <div class="content container-fluid">
+                    <div *ngIf="selectedButton === 'overview'">
+                        <app-overview></app-overview>
+                    </div>
+                    <div *ngIf="selectedButton === 'problem'" class="container-fluid w-100 ms-0">
+                        <app-problem-details></app-problem-details>
+                    </div>
+                    <div *ngIf="selectedButton === 'status'">
+                        <app-contest-status></app-contest-status>
+                    </div>
+                    <div *ngIf="selectedButton === 'rank'">
+                        <app-contest-rank></app-contest-rank>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div *ngIf="selectedButton === 'problem'" class="container-fluid w-100 ms-0">
-            <app-problem-details></app-problem-details>
-        </div>
-        <div *ngIf="selectedButton === 'status'">
-            <app-contest-status></app-contest-status>
-        </div>
-        <div *ngIf="selectedButton === 'rank'">
-            <app-contest-rank ></app-contest-rank>
-        </div>
-    </div>
-</div>  
     </div>
 </div>
